# snippets

./: .gitignore  metadata.json  mtime.json  tags.json
images/M5VMP2BA39UWP.info/: metadata.json
images/M5VMSVOSLCZ2H.info/: metadata.json  stopwatch.cpp
images/M5VMTXEDDQ30F.info/: main.rs  metadata.json
images/M5VT7FLKRRCW7.info/: fuzzy.py  metadata.json  open.code-workspace  pyproject.toml  std.py
images/M5XAF2JBUS8F1.info/: metadata.json  pyproject.toml  test.py
images/M5XAF2JBUS8F1.info/autoplayer/: debug.py  model.py  player.py  utils.py
images/M5XEHFJTBZ5ZZ.info/: metadata.json  pyproject.toml
images/M5XEI4E29UFZ3.info/: metadata.json
images/M5XEIT2DPN320.info/: dependency injector.py  metadata.json
images/M5XEJAUA9A443.info/: main.py  metadata.json  pyproject.toml
images/M5XEKLPAGXF9P.info/: metadata.json  multiple frames.java
images/M5XELNDWBGO8J.info/: metadata.json
images/M5XFY33RK6JWE.info/: main.py  metadata.json  open.code-workspace
images/M5XGUGIUZBQE1.info/: README.md  metadata.json  pyproject.toml  w.py
images/M5XGUGIUZBQE1.info/src/masscodepp/: api.py  app.py  db.py  utils.py
images/M5XGUGIUZBQE1.info/tests/: test_utils.py
images/M5XHOYK4X1NMX.info/: metadata.json  package-lock.json  package.json
images/M5XHZ31VGZRD0.info/: framehack.py  metadata.json
images/M5XHZCS9169T7.info/: metadata.json
images/M5XHZQKZR1HHK.info/: combined.html  donut.js.code-workspace  main.html  metadata.json
images/M5XI0Q55LASAM.info/: metadata.json  mouse drag and drop.py
images/M5XI1C68VW69T.info/: metadata.json
images/M5XI1RJ2X9PTG.info/: metadata.json
images/M5XI297GBO3UW.info/: dod.py  frozen.py  metadata.json  pyproject.toml  test_dod.py
images/M5XI32JH7YHYF.info/: create windows notification.java  metadata.json
images/M5XI8N1T71WM4.info/: metadata.json
images/M5XIA5J244XUX.info/: metadata.json  pillow color utils.py
images/M5XIOSH440PT2.info/: cli terminal select.py  metadata.json
images/M5XJ2PZJ4J8KI.info/: metadata.json
images/M5XJGIDEXRGYH.info/: metadata.json  zipStructureCache.json
images/M5XJH2J4M3MGP.info/: metadata.json  typing literal generator.py
(+33 files in other folders)
